wireplumber (0.4.13-1) UNRELEASED; urgency=medium

  * New upstream version

 -- Dylan Aïssi <daissi@debian.org>  Wed, 14 Dec 2022 09:28:56 +0100

wireplumber (0.4.12-1) unstable; urgency=medium

  [ Dylan Aïssi ]
  * New upstream version
  * Drop patches included in upstream release:
      - fix_variable_name.patch
      - eb406bdb: dbus: fix crash when trying to reconnect
      - 37c839b9: policy-node: fix potential rescan loop
      - 370b6929: m-si-link: don't wait for establish before activation
  * Update symbols file

  [ Debian Janitor ]
  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
    Repository-Browse.

 -- Dylan Aïssi <daissi@debian.org>  Wed, 05 Oct 2022 09:16:57 +0200

wireplumber (0.4.11-5) unstable; urgency=medium

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster (oldstable):
    + Build-Depends: Drop versioned constraint on doxygen and pkg-config.

  [ Dylan Aïssi ]
  * Clarify relation between wireplumber and libspa-0.2-bluetooth
     in wireplumber.README.Debian (Closes: #997862)

 -- Dylan Aïssi <daissi@debian.org>  Wed, 14 Sep 2022 16:20:52 +0200

wireplumber (0.4.11-4) unstable; urgency=medium

  * Build a new package wireplumber-doc (Closes: #1019285)
  * Add patch removing service alias. This alias is only used to prevent
    wireplumber and pipewire-media-session from being enabled at the same time.
    This is already handled at the package level with a conflict between both,
    thus we can safetly remove alias and avoid the issue with systemd.
    (Closes: #997818)

 -- Dylan Aïssi <daissi@debian.org>  Mon, 12 Sep 2022 09:30:40 +0200

wireplumber (0.4.11-3) unstable; urgency=medium

  * Cherry-pick upstream recommended patches:
      - 37c839b9: policy-node: fix potential rescan loop
      - 370b6929: m-si-link: don't wait for establish before activation + cleanup links
     (Closes: #1017397)

 -- Dylan Aïssi <daissi@debian.org>  Mon, 05 Sep 2022 11:16:08 +0200
